# neoc

./: .gitattributes  .gitignore  README.md
compiler/necc/: CMakeLists.txt  LICENSE  README.md
compiler/necc/src/: ast.c  ast.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.c  token.h
compiler/neoc/src/: lexer.c  lexer.h  main.c  token.h
compiler/tests/: fibonacci.nc
spec/: neoc.md
